[gd_scene load_steps=4 format=3 uid="uid://1h1ettp7i1ys"]

[ext_resource type="Script" path="res://menu/main_screen.gd" id="1_xg7ae"]
[ext_resource type="Texture2D" uid="uid://bn0sax8oxyuyi" path="res://resource/MainBackground.png" id="2_6uma5"]
[ext_resource type="FontFile" uid="uid://4owxjany8n7h" path="res://resource/fonts/ARCADECLASSIC.TTF" id="3_5x5nq"]

[node name="MainScreen" type="CanvasLayer"]
script = ExtResource("1_xg7ae")

[node name="Main_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 22.0
offset_top = -10.0
offset_right = 62.0
offset_bottom = 30.0

[node name="MarginContainer" type="MarginContainer" parent="Main_menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.575
anchor_top = 0.25
anchor_right = 25.05
anchor_bottom = 15.275
offset_top = 1.0
offset_right = 1.99994
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="TextureRect" type="TextureRect" parent="Main_menu/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_6uma5")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Main_menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Separator" type="Control" parent="Main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.678431, 0.121569, 0.0588235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_5x5nq")
theme_override_font_sizes/font_size = 49
text = "A   NORMAL  DAY   AT   USA"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main_menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main_menu/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="separator2" type="Control" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5x5nq")
theme_override_font_sizes/font_size = 22
text = "PLAY"

[node name="separator3" type="Control" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5x5nq")
theme_override_font_sizes/font_size = 22
text = "OPTIONS"

[node name="separator4" type="Control" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="Main_menu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5x5nq")
theme_override_font_sizes/font_size = 22
text = "QUIT"

[connection signal="pressed" from="Main_menu/MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main_menu/MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_menu/MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
